# r-math

./: .gitignore  Cargo.toml  R-Math-Algorithms-Overview.md  README.md
benches/: berlekamp_bench.rs  chakravala_bench.rs  cuthill_mckee_bench.rs  freivalds_bench.rs
src/: berlekamp.rs  chakravala.rs  cuthill_mckee.rs  freivalds.rs  lib.rs  tonelli_shanks.rs
test_data/: large_csc_matrix.mtx  medium_matrix.mtx
tests/: chakravala_tests.rs  cuthill_mckee_integration.rs
